fixed all bleeding pages

--- a/public/stylesheets/memberships.css
+++ b/public/stylesheets/memberships.css
@@ -1,5 +1,5 @@
 .memberships-image {
-    width: 100vw;
+    width: 100%;
 
     object-fit: cover;
     object-position: bottom;
