--- a/public/stylesheets/ourclasses.css
+++ b/public/stylesheets/ourclasses.css
@@ -3,7 +3,7 @@ body {
 }
 
 .our-classes-image {
-    width: 100vw;
+    width: 100%;
     height: 513px;
     object-fit: cover;
     filter: brightness(0.5);
