--- a/public/stylesheets/ourproducts.css
+++ b/public/stylesheets/ourproducts.css
@@ -3,7 +3,7 @@ body {
 }
 
 .our-products-image {
-    width: 100vw;
+    width: 100%;
     height: 513px;
     object-fit: cover;
     object-position: top;
